added this navbar and banner section

--- a/index.html
+++ b/index.html
@@ -8,10 +8,75 @@
   </head>
   <body>
     <!-- this header section star -->
-    <header></header>
+    <header>
+      <!-- nav section -->
+      <nav class="nav-section-all-content">
+        <div class="nav-section">
+          <div class="nab-head">
+            <h3><i>Fitness</i></h3>
+          </div>
+          <div class="nav-items">
+            <ul>
+              <li>
+                <a
+                  href="#"
+                  style="
+                    width: 52px;
+                    height: 22px;
+                    padding: 10px;
+                    border-radius: 20px;
+                    background: rgb(230, 83, 60);
+                  "
+                  >Home</a
+                >
+              </li>
+              <li><a href="#">Servise</a></li>
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">About</a></li>
+            </ul>
+            <img src="images/hamburger.png" class="hidden-item" alt="" />
+          </div>
+        </div>
+      </nav>
+    </header>
     <!-- this header section close -->
     <!-- this is main section start -->
-    <main></main>
+    <main>
+      <!-- banner section -->
+      <section class="banner-all-content">
+        <div class="banner-section">
+          <div class="banner-content">
+            <h3>Get body in shape & stay healthy</h3>
+            <p>
+              Get in shape and stay healthy by combining regular exercise, a
+              balanced diet, and proper rest. Focus on strength training,
+              cardio, and flexibility exercises.
+            </p>
+            <div class="banner-button">
+              <button class="button-one">Join Club Now!</button>
+              <button class="button-two">Download App</button>
+            </div>
+          </div>
+          <div class="banner-img">
+            <img src="images/Images 2.png" alt="" />
+
+            <div class="video">
+              <div class="circle"></div>
+              <div class="content">
+                <h3>350+</h3>
+                <p>Video tutorial</p>
+              </div>
+            </div>
+            <div class="workout-video">
+              <h3>500+</h3>
+              <p>Free workout video's</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      
+    </main>
     <!-- this main section close -->
     <!-- this footer section start -->
     <footer></footer>
