added this habits section

--- a/index.html
+++ b/index.html
@@ -75,7 +75,54 @@
         </div>
       </section>
 
-      
+      <!-- Change Your Habits section -->
+      <section class="habits-all-section">
+        <div class="habit-section">
+          <div class="content">
+            <h2>Change Your Habits</h2>
+            <p>
+              Change Your Habits" is a dynamic online program that empowers you
+              to transform your daily routines. With practical strategies and
+              engaging lessons.
+            </p>
+          </div>
+          <div class="habit-img">
+            <div class="img-one">
+              <img src="images/image 3.png" alt="" />
+              <h3>Movement</h3>
+              <p>
+                A series of quick, effective movements designed to enhance
+                strength.
+              </p>
+            </div>
+
+            <div class="img-two">
+              <img src="images/image 2.png" alt="" />
+              <h3>Time</h3>
+              <p>
+                Each exercise movement can be completed in under 5 minutes,
+                making it easy to fit into any schedule!
+              </p>
+            </div>
+            <div class="img-three">
+              <img src="images/image 4.png" alt="" />
+              <h3>Practise</h3>
+              <p>
+                Incorporate these movements into your daily routine to build
+                strength and flexibility!
+              </p>
+            </div>
+            <div class="img-four">
+              <img src="images/image 5.png" alt="" />
+              <h3>Weight Loss</h3>
+              <p>
+                A focused program designed to help you achieve weight loss
+                through balanced nutrition
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- this main section close -->
     <!-- this footer section start -->
