added run section

--- a/index.html
+++ b/index.html
@@ -123,6 +123,24 @@
           </div>
         </div>
       </section>
+      <!-- Run an Extra Mile Easily -->
+      <section class="run-all-section">
+        <div class="run-section">
+          <div class="content">
+            <h3>Run an Extra
+              <br>
+              Mile Easily</h3>
+            <p>
+              "Run an Extra Mile Easily" is a motivational guide designed to
+              help you enhance your running performance and endurance.
+            </p>
+            <button>Join Now</button>
+          </div>
+          <div class="content-img">
+            <img src="images/run.jpg" alt="" />
+          </div>
+        </div>
+      </section>
     </main>
     <!-- this main section close -->
     <!-- this footer section start -->
