added this bmi calculator section

--- a/index.html
+++ b/index.html
@@ -127,9 +127,11 @@
       <section class="run-all-section">
         <div class="run-section">
           <div class="content">
-            <h3>Run an Extra
-              <br>
-              Mile Easily</h3>
+            <h3>
+              Run an Extra
+              <br />
+              Mile Easily
+            </h3>
             <p>
               "Run an Extra Mile Easily" is a motivational guide designed to
               help you enhance your running performance and endurance.
@@ -138,6 +140,77 @@
           </div>
           <div class="content-img">
             <img src="images/run.jpg" alt="" />
+          </div>
+        </div>
+      </section>
+      <!-- BMI Calculator section -->
+      <section class="calculator-all-section">
+        <div class="calculator-section">
+          <div class="heading">
+            <h3>BMI Calculator</h3>
+            <p>
+              A BMI calculator estimates body mass index based on your weight
+              and height, helping assess whether you are underweight.
+            </p>
+          </div>
+
+          <div class="body-calculate">
+            <div class="bmi-calculation">
+              <div class="chart">
+                <h3>BMI Calculator Chart</h3>
+                <table>
+                  <tr>
+                    <th>BMI</th>
+                    <th>Weight Status</th>
+                  </tr>
+                  <tr>
+                    <td>Below 18.5</td>
+                    <td>Underweight</td>
+                  </tr>
+                  <tr>
+                    <td>18.5 - 24.9</td>
+                    <td>Healthy</td>
+                  </tr>
+                  <tr>
+                    <td>25.0 - 29.9</td>
+                    <td>Overweight</td>
+                  </tr>
+                  <tr>
+                    <td>30.0 - and Above</td>
+                    <td>Obese</td>
+                  </tr>
+                </table>
+              </div>
+              <div class="bmi">
+                <h3>Calculate your BMI</h3>
+                <p>
+                  We believe fitness should be accessible to everyone,
+                  everywhere, regardless of income or access to a gym.
+                </p>
+                <form action="#">
+                  <div class="height-weight">
+                    <input type="text" placeholder="Height/cm" class="height" />
+                    <input type="text" placeholder="Weight/kg" class="weight" />
+                  </div>
+                  <div class="age-sex">
+                    <input type="text" placeholder="Age" class="age" />
+                    <select name="sex" class="sex">
+                      <option value="Male">sex</option>
+                      <option value="Male">Male</option>
+                      <option value="Female">Female</option>
+                      <option value="Other's">Other's</option>
+                    </select>
+                  </div>
+                  <div class="active-factor">
+                    <!-- <input type="text" placeholder="Select an activity factor"> -->
+                    <select name="factror" class="factor">
+                      <option value="Male">Select an activity factor</option>
+                    </select>
+                  </div>
+                  <button>Calculate</button>
+                </form>
+              </div>
+            </div>
           </div>
         </div>
       </section>
