added this our team  section

--- a/index.html
+++ b/index.html
@@ -214,6 +214,26 @@
           </div>
         </div>
       </section>
+      <!-- our team -->
+      <section class="team-all-section">
+        <div class="team-section">
+          <div class="content">
+            <h2>Meet Our Team</h2>
+            <p>
+              We believe fitness should be accessible to everyone, everywhere,
+              regardless of income or access to a gym.
+            </p>
+          </div>
+          <div class="team-img">
+            <img src="images/trainer1.png" alt="" />
+            <img src="images/trainer2.png" alt="" />
+            <img src="images/trainer3.png" alt="" />
+            <img src="images/trainer4.png" alt="" />
+            <img src="images/trainer5.png" alt="" />
+            <img src="images/trainer6.png" alt="" />
+          </div>
+        </div>
+      </section>
     </main>
     <!-- this main section close -->
     <!-- this footer section start -->
