added this footer section

--- a/index.html
+++ b/index.html
@@ -237,7 +237,41 @@
     </main>
     <!-- this main section close -->
     <!-- this footer section start -->
-    <footer></footer>
+    <footer>
+      <section class="footer-all-section">
+        <div class="footer-section">
+          <div class="first-col">
+            <h2><i>Fitness</i></h2>
+            <p>
+              We believe fitness should be accessible to everyone, everywhere,
+              regardless of income or access to a gym. With hundreds of
+              professional workouts.
+            </p>
+          </div>
+          <div class="secound-col">
+            <h3>Get Started</h3>
+            <ul>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Contact us</a></li>
+              <li><a href="#">Affiliate program</a></li>
+              <li><a href="#">About us</a></li>
+            </ul>
+          </div>
+          <div class="secound-col">
+            <h3>Get Started</h3>
+            <ul>
+              <li><a href="#">Fitness</a></li>
+              <li><a href="#">Platefrom</a></li>
+              <li><a href="#">workout library</a></li>
+              <li><a href="#">App design</a></li>
+            </ul>
+          </div>
+
+        </div>
+        <hr>
+        <p>All right reserved @Fitness 2024</p>
+      </section>
+    </footer>
     <!-- this footer section close -->
   </body>
 </html>
